# domobot

./: .gitignore  .pre-commit-config.yaml  DESCRIPTION  README.md  config.json  setup.cfg  setup.py
.github/workflows/: python-publish.yml  release_workflow.yaml  tests.yaml
domobot/: __init__.py  cli.py  config.py  fake_garage_door.py  handlers.py  motor.py  motor_factory.py  schema.py  status_garage_door_controller.py
