[metadata]
name = domobot
version = attr: domobot.VERSION
description = file: DESCRIPTION
long_description = file: README.md
license = GPL-3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
  aiogram

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    domobot = domobot.cli:domobot_main
