[metadata]
name = domobot
description = file: DESCRIPTION
long_description = file: README.md
license = GPL-3
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
  aiogram
  jsonschema
  garage-door-controller @ git+https://github.com/joselsegura/garage_door_controller@0.2.0#egg=garage-door-controller
setup_requires =
  setuptools_scm

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    domobot = domobot.cli:domobot_main

[options.extras_require]
dev =
    black
    flake8
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-cov
